--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <script src="https://kit.fontawesome.com/a37e360464.js" crossorigin="anonymous"></script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
@@ -39,6 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
 </body>
 
 </html>
